--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,10 @@
   "authors": [
     {
       "name": "linhmc_new",
-      "id": "000000000000000000"
+      "id": "123456789012345678"
     }
   ],
-  "main": "src/index.ts",
+  "main": "index.js",
   "vendetta": {
     "icon": "ic_calendar_24px"
   }
